# circt-pass-plugin-example

./: .gitmodules  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/CustomOperation/: CMakeLists.txt  CustomOperation.h  CustomOperation.td
src/: CustomOperation.cpp
